--- a/GUI/XIB files/Configuration.xib
+++ b/GUI/XIB files/Configuration.xib
@@ -23,9 +23,9 @@
                 <outlet property="audVolR" destination="Hrp-8d-Rbm" id="i1V-rn-x1a"/>
                 <outlet property="cartDeleteButton" destination="wF6-vA-6xk" id="nXM-a7-0pH"/>
                 <outlet property="cartDropView" destination="I3M-ht-lkl" id="Hal-Hp-Zn2"/>
-                <outlet property="cartSubsubtitle" destination="pJq-X4-x2y" id="dnt-HT-phH"/>
-                <outlet property="cartSubtitle" destination="Pea-uJ-4G8" id="raO-PO-Cfy"/>
-                <outlet property="cartTitle" destination="m0b-3R-CyB" id="sy5-3M-2iP"/>
+                <outlet property="cartHash" destination="pJq-X4-x2y" id="dnt-HT-phH"/>
+                <outlet property="cartManufacturer" destination="Pea-uJ-4G8" id="raO-PO-Cfy"/>
+                <outlet property="cartName" destination="m0b-3R-CyB" id="sy5-3M-2iP"/>
                 <outlet property="comPowerButton" destination="MaC-Tv-e4H" id="r0L-EC-VjG"/>
                 <outlet property="comSbCollisions" destination="bnG-rw-e1M" id="HG9-2I-s0C"/>
                 <outlet property="comSsCollisions" destination="qgS-di-RAL" id="dez-ar-RTx"/>
@@ -119,14 +119,14 @@
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <box fixedFrame="YES" borderType="line" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="6tf-5c-i12">
-                                            <rect key="frame" x="59" y="190" width="199" height="187"/>
+                                            <rect key="frame" x="10" y="118" width="223" height="259"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                             <view key="contentView" id="fLj-GD-6Pn">
-                                                <rect key="frame" x="4" y="5" width="191" height="179"/>
+                                                <rect key="frame" x="4" y="5" width="215" height="251"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <imageView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I3M-ht-lkl" customClass="RomDropView" customModule="Tiara" customModuleProvider="target">
-                                                        <rect key="frame" x="29" y="20" width="133" height="137"/>
+                                                        <rect key="frame" x="20" y="18" width="174" height="213"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" animates="YES" imageScaling="proportionallyDown" image="rom_missing" id="C7w-XI-Fcn"/>
                                                         <connections>
@@ -162,7 +162,7 @@ Gw
                                             </connections>
                                         </button>
                                         <textField focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pea-uJ-4G8">
-                                            <rect key="frame" x="273" y="339" width="169" height="17"/>
+                                            <rect key="frame" x="242" y="339" width="320" height="17"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" controlSize="small" selectable="YES" alignment="left" title="Required" id="dRj-0k-phn">
                                                 <font key="font" metaFont="message" size="11"/>
@@ -171,7 +171,7 @@ Gw
                                             </textFieldCell>
                                         </textField>
                                         <textField focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pJq-X4-x2y">
-                                            <rect key="frame" x="273" y="313" width="169" height="18"/>
+                                            <rect key="frame" x="242" y="313" width="312" height="18"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" controlSize="small" selectable="YES" sendsActionOnEndEditing="YES" alignment="left" title="Hash: 1020304050607080" id="V0T-0g-SdF">
                                                 <font key="font" metaFont="message" size="11"/>
@@ -180,7 +180,7 @@ Gw
                                             </textFieldCell>
                                         </textField>
                                         <textField focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m0b-3R-CyB">
-                                            <rect key="frame" x="273" y="358" width="169" height="17"/>
+                                            <rect key="frame" x="242" y="358" width="317" height="17"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="Cartridge" id="GKO-Q9-a3a">
                                                 <font key="font" metaFont="systemBold"/>
@@ -222,7 +222,7 @@ DQ
                                             </connections>
                                         </button>
                                         <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wF6-vA-6xk">
-                                            <rect key="frame" x="275" y="191" width="20.5" height="28"/>
+                                            <rect key="frame" x="238" y="119" width="20.5" height="28"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                             <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="NSTouchBarDeleteTemplate" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" refusesFirstResponder="YES" state="on" imageScaling="proportionallyUpOrDown" inset="2" id="uI4-ym-kRa">
                                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
